# chatx5

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  REFACTOR_SUMMARY.md  install.sh  pyproject.toml  run.bat  run.sh  setup.py  uninstall.bat  uninstall.sh  version.properties
.github/workflows/: build-apk.yml  checks.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
chatx5/: __init__.py  _version.py  app.py  portable.py  release_notes.py
chatx5/android_usb/: bootstrap.py
chatx5/core/: contacts.py  discovery.py  lan_beacon.py  lan_rns.py  lan_transfer.py  messaging.py  peer_probe.py  rns_interfaces.py  rns_tuning.py  serial_transfer.py  transport_isolation.py  voice.py
chatx5/core/messaging/: __init__.py  announce.py  backend.py  connect.py  constants.py  hub.py  inbound_callbacks.py  links.py  models.py  transfer.py
chatx5/core/rns_interfaces/: __init__.py  config.py  iface_list.py  presets.py  runtime_common.py  serial_ports.py  serial_runtime.py  settings.py  summary.py  tcp_iface.py
chatx5/utils/: file_serve.py  folder_picker.py  helpers.py  platform.py  system.py  tls.py
chatx5/web/: background_tasks.py  discovery_bridge.py  history_store.py  hub_runtime.py  messaging_bridge.py  peer_connect.py  rns_lifecycle.py  rns_utils.py  server.py  settings_store.py  share_browser.py
chatx5/web/routes/: __init__.py  contacts_routes.py  debug_routes.py  discovery_routes.py  identity_routes.py  queue_routes.py  (+3 more)
scripts/: bump-version.sh  check.sh  extract_web_server.py  gen-emoji-keywords.py  install-arch.sh  install-macos.sh  install-ubuntu.sh  launch-server.sh  pick-folder.py  restart-server.sh  setup-serial-perms.sh  stop-chatx5.bat  stop-chatx5.sh  sync-android.sh  verify-android-sync.sh
scripts/udev/: 99-chatx5-serial.rules
tests/: test_announce_transport_isolation.py  test_beacon_serial_discovery.py  test_connect_wake.py  test_contact_dedup.py  test_contact_endpoint.py  test_contact_hash_sync.py  test_contact_names.py  test_cross_traffic.py  test_defaults_hub.py  test_discovery_identity.py  test_dual_identity.py  test_dual_transport_contacts.py  test_false_serial_discovery.py  test_http_peer.py  test_hub_group_files.py  test_hub_tcp_relay.py  test_inbound_link.py  test_lan_scope.py  test_path_selection.py  test_peer_identity.py  test_peer_probe.py  test_platform_interfaces.py  test_probe_interval.py  test_received_dir.py  test_rns_interface_summary.py  test_saved_contact_connect.py  test_serial_announce_policy.py  test_serial_beacon_callback.py  test_serial_failover.py  test_serial_path_seed.py  test_serial_runtime.py  test_serial_scope_inbound.py  test_serial_transfer.py  test_share_browser.py  test_startup.py  test_static_frontend.py  test_static_routes.py  test_transport_isolation.py  test_transport_matrix.py  test_viewing_via_routing.py
(+94 files in other folders)
