[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatx5"
version = "0.6.25"
description = "Decentralized chat over Reticulum Network Stack"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
dependencies = [
    "rns>=0.8.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
voice = ["pyaudio"]
tui = ["textual>=0.52"]
full = ["pyaudio", "textual>=0.52"]
dev = [
    "ruff>=0.9",
    "mypy>=1.11",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chatx5*"]

[project.scripts]
chatx5 = "chatx5.app:main"
chatx5-web = "chatx5.web.server:main"

[tool.setuptools.package-data]
chatx5 = ["web/static/*", "web/static/css/*", "web/static/js/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["android/", ".venv/", "build/", "dist/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E731", "E741"]
"chatx5/core/messaging/__init__.py" = ["E402", "F401"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["android/", "tests/", "build/", "dist/"]
warn_unused_ignores = true
warn_redundant_casts = true
